# CGFrameworkStudent

./: .gitignore  CMakeLists.txt
Lab1/res/: output.tga
Lab1/src/framework/: application.h  image.cpp  image.h  particleSystem.cpp
src/framework/: application.cpp  application.h  button.h  camera.h  entity.cpp  entity.h  framework.h  image.cpp  image.h  mesh.cpp  particleSystem.h
